tests/ui/dis/array_location_calculation.stderr
thread 'rustc' panicked at 'no function with the name `add_two_ints::add_two_ints` found in:
; SPIR-V
; Version: 1.3
; Generator: Unknown
; Bound: 28
OpCapability Float64
OpCapability Int16
OpCapability Int64
OpCapability Int8
OpCapability ShaderClockKHR
OpCapability Shader
OpCapability VulkanMemoryModel
OpExtension "SPV_KHR_shader_clock"
OpExtension "SPV_KHR_vulkan_memory_model"
OpMemoryModel Logical Vulkan
OpEntryPoint Fragment %1 "array_locations" %2 %3 %4
OpExecutionMode %1 OriginUpperLeft
%5 = OpString "C:/Users/Ashley/Desktop/rust-gpu/tests/ui/dis/array_location_calculation.rs"
OpName %6 "array_location_calculation::array_locations"
OpName %2 "one"
OpName %3 "two"
OpName %4 "three"
OpDecorate %7 ArrayStride 4
OpDecorate %8 ArrayStride 4
OpDecorate %2 Location 0
OpDecorate %3 Location 7
OpDecorate %4 Location 10
%9 = OpTypeVoid
%10 = OpTypeFloat 32
%11 = OpTypeInt 32 0
%12 = OpConstant  %11  7
%7 = OpTypeArray %10 %12
%13 = OpConstant  %11  3
%8 = OpTypeArray %10 %13
%14 = OpTypeFunction %9 %7 %8 %10
%15 = OpTypeFunction %9
%16 = OpTypePointer Input %7
%2 = OpVariable  %16  Input
%17 = OpTypePointer Input %8
%3 = OpVariable  %17  Input
%18 = OpTypePointer Input %10
%4 = OpVariable  %18  Input
%6 = OpFunction  %9  None %14
%19 = OpFunctionParameter  %7
%20 = OpFunctionParameter  %8
%21 = OpFunctionParameter  %10
%22 = OpLabel
OpLine %5 7 67
OpReturn
OpFunctionEnd
%1 = OpFunction  %9  None %15
%23 = OpLabel
OpLine %5 7 23
%24 = OpLoad  %7  %2
OpLine %5 7 38
%25 = OpLoad  %8  %3
OpLine %5 7 53
%26 = OpLoad  %10  %4
OpLine %5 7 0
%27 = OpFunctionCall  %9  %6 %24 %25 %26
OpReturn
OpFunctionEnd
', crates/rustc_codegen_spirv/src/codegen_cx/mod.rs:378:21
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: internal compiler error: unexpected panic

note: the compiler unexpectedly panicked. this is a bug.

note: we would appreciate a bug report: https://github.com/EmbarkStudios/rust-gpu/issues/new

note: rustc 1.58.0-nightly (29b124802 2021-10-25) running on x86_64-pc-windows-msvc

note: compiler flags: -Z codegen-backend=C:/Users/Ashley/Desktop/rust-gpu/target/release/deps/rustc_codegen_spirv.dll -Z symbol-mangling-version=v0 -Z unstable-options -Z crate-attr=no_std -Z crate-attr=feature(register_attr,asm) -Z crate-attr=register_attr(spirv) -C prefer-dynamic -C overflow-checks=off -C debug-assertions=off -C debuginfo=2 -C embed-bitcode=no -C target-feature=+Int8,+Int16,+Int64,+Float64,+ShaderClockKHR,+ext:SPV_KHR_shader_clock -C llvm-args=--disassemble-fn=add_two_ints::add_two_ints --crate-type dylib

query stack during panic:
end of query stack
note: `rust-gpu` version 0.4.0-alpha.12

